# agent-lab

./: .env.example  .gitignore  pyproject.toml
configs/: models.yaml  universe.yaml
src/stock_agent/: __init__.py  config.py
src/stock_agent/collectors/: _http.py  alpaca_market.py  alpha_vantage.py  gdelt.py  sec_edgar.py
src/stock_agent/evidence/: __init__.py  dedupe.py  pack_builder.py  summarizer.py
src/stock_agent/models/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py  prompts.py
src/stock_agent/reports/: __init__.py  analyst_runner.py  renderer.py  synthesizer.py
src/stock_agent/reports/templates/: daily_report.html.j2  daily_report.md.j2
src/stock_agent/storage/: __init__.py  local_store.py  object_store.py  schemas.py
tests/: test_config.py
tests/collectors/: test_alpaca_market.py  test_alpha_vantage.py  test_gdelt.py  test_sec_edgar.py
tests/evidence/: test_dedupe.py  test_pack_builder.py
tests/models/: test_analyst_contract.py
tests/reports/: test_renderer.py  test_synthesizer.py
tests/storage/: test_local_store.py  test_object_store.py
